[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/AldotheApache.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/title_scrn/buttons/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/title_scrn/buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/title_scrn/buttons/LoadGameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/title_scrn/buttons/OptionsButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/title_scrn/buttons/ContinueButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/title_scrn/OptionsPopup.gd" type="Script" id=8]
[ext_resource path="res://ui/title_scrn/DeleteSaveConfirm.gd" type="Script" id=9]
[ext_resource path="res://ui/title_scrn/StartMenu.gd" type="Script" id=10]
[ext_resource path="res://assets/music/music_zapsplat_beach_cruzin.mp3" type="AudioStream" id=11]
[ext_resource path="res://ui/title_scrn/LoadGamePopup.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLayout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 40.0
margin_right = -150.0
margin_bottom = -40.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MenuLayout"]
margin_right = 980.0
margin_bottom = 117.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "SimCoast"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="MenuLayout"]
margin_top = 122.0
margin_right = 980.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="ContinueButton" parent="MenuLayout/Buttons" instance=ExtResource( 7 )]
margin_top = 31.0
margin_right = 980.0
margin_bottom = 106.0

[node name="NewGameButton" parent="MenuLayout/Buttons" instance=ExtResource( 4 )]
margin_top = 126.0
margin_right = 980.0
margin_bottom = 201.0

[node name="LoadGameButton" parent="MenuLayout/Buttons" instance=ExtResource( 5 )]
margin_top = 221.0
margin_right = 980.0
margin_bottom = 296.0

[node name="OptionsButton" parent="MenuLayout/Buttons" instance=ExtResource( 6 )]
margin_top = 316.0
margin_right = 980.0
margin_bottom = 391.0

[node name="QuitButton" parent="MenuLayout/Buttons" instance=ExtResource( 3 )]
margin_top = 411.0
margin_right = 980.0
margin_bottom = 486.0

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -101.0
margin_right = 1066.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Version 1.0.0 Alpha
SimCoast Squad"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.0
autoplay = true
bus = "Music"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.0
autoplay = true
bus = "SFX"

[node name="OptionsPopup" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 267.0
rect_min_size = Vector2( 400, 400 )
theme = SubResource( 2 )
window_title = "Options Menu"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -242.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 473.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_right = 484.0
margin_bottom = 40.0
alignment = 1

[node name="FullScreenLabel" type="Label" parent="OptionsPopup/VBoxContainer/FullScreen"]
margin_left = 86.0
margin_top = 9.0
margin_right = 317.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "Toggle Fullscreen"
align = 1

[node name="FullScreenToggle" type="CheckButton" parent="OptionsPopup/VBoxContainer/FullScreen"]
margin_left = 321.0
margin_right = 397.0
margin_bottom = 40.0

[node name="VolumeTable" type="HBoxContainer" parent="OptionsPopup/VBoxContainer"]
margin_top = 45.0
margin_right = 484.0
margin_bottom = 173.0
alignment = 1

[node name="VolumeLabels" type="VBoxContainer" parent="OptionsPopup/VBoxContainer/VolumeTable"]
margin_left = 34.0
margin_right = 215.0
margin_bottom = 128.0
custom_constants/separation = 25
alignment = 1

[node name="MasterLabel" type="Label" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeLabels"]
margin_top = 6.0
margin_right = 181.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Master Volume"
align = 1

[node name="MusicLabel" type="Label" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeLabels"]
margin_top = 53.0
margin_right = 181.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"
align = 1

[node name="SFXLabel" type="Label" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeLabels"]
margin_top = 100.0
margin_right = 181.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 1 )
text = "SFX Volume"
align = 1

[node name="VolumeSliders" type="VBoxContainer" parent="OptionsPopup/VBoxContainer/VolumeTable"]
margin_left = 219.0
margin_right = 369.0
margin_bottom = 128.0
custom_constants/separation = 15
alignment = 1

[node name="MasterVolSlider" type="HSlider" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeSliders"]
margin_top = 4.0
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 30 )
min_value = -50.0
max_value = 50.0

[node name="MusicVolSlider" type="HSlider" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeSliders"]
margin_top = 49.0
margin_right = 150.0
margin_bottom = 79.0
rect_min_size = Vector2( 150, 30 )
min_value = -50.0
max_value = 50.0

[node name="SFXVolSlider" type="HSlider" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeSliders"]
margin_top = 94.0
margin_right = 150.0
margin_bottom = 124.0
rect_min_size = Vector2( 150, 30 )
min_value = -50.0
max_value = 50.0

[node name="VolumeToggles" type="VBoxContainer" parent="OptionsPopup/VBoxContainer/VolumeTable"]
margin_left = 373.0
margin_right = 449.0
margin_bottom = 128.0

[node name="MasterMute" type="CheckButton" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeToggles"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="MusicMute" type="CheckButton" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeToggles"]
margin_top = 44.0
margin_right = 76.0
margin_bottom = 84.0
pressed = true

[node name="SFXMute" type="CheckButton" parent="OptionsPopup/VBoxContainer/VolumeTable/VolumeToggles"]
margin_top = 88.0
margin_right = 76.0
margin_bottom = 128.0
pressed = true

[node name="DeleteSaveButton" type="Button" parent="OptionsPopup/VBoxContainer"]
margin_top = 178.0
margin_right = 484.0
margin_bottom = 206.0
flat = true

[node name="Label" type="Label" parent="OptionsPopup/VBoxContainer/DeleteSaveButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_right = -250.0
custom_fonts/font = ExtResource( 1 )
text = "Delete Save"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSaveConfirm" type="ConfirmationDialog" parent="OptionsPopup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 492.0
margin_bottom = 473.0
rect_min_size = Vector2( 300, 80 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningMsg" type="Label" parent="OptionsPopup/DeleteSaveConfirm"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.0
margin_top = 8.0
margin_right = 234.0
margin_bottom = 421.0
text = "Are you sure you wish to delete your current save file?

Warning: Deleted save files cannot be recovered!"
align = 1
autowrap = true

[node name="LoadGamePopup" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
resizable = true
mode = 0
script = ExtResource( 12 )

[connection signal="pressed" from="MenuLayout/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MenuLayout/Buttons/LoadGameButton" to="LoadGamePopup" method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="MenuLayout/Buttons/OptionsButton" to="OptionsPopup" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuLayout/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="OptionsPopup/VBoxContainer/FullScreen/FullScreenToggle" to="." method="_on_FullScreenToggle_pressed"]
[connection signal="value_changed" from="OptionsPopup/VBoxContainer/VolumeTable/VolumeSliders/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="OptionsPopup/VBoxContainer/VolumeTable/VolumeSliders/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="OptionsPopup/VBoxContainer/VolumeTable/VolumeSliders/SFXVolSlider" to="." method="_on_SFXVolSlider_value_changed"]
[connection signal="toggled" from="OptionsPopup/VBoxContainer/VolumeTable/VolumeToggles/MasterMute" to="." method="_on_MasterMute_toggled"]
[connection signal="toggled" from="OptionsPopup/VBoxContainer/VolumeTable/VolumeToggles/MusicMute" to="." method="_on_MusicMute_toggled"]
[connection signal="toggled" from="OptionsPopup/VBoxContainer/VolumeTable/VolumeToggles/SFXMute" to="." method="_on_SFXMute_toggled"]
[connection signal="pressed" from="OptionsPopup/VBoxContainer/DeleteSaveButton" to="OptionsPopup/DeleteSaveConfirm" method="_on_DeleteSaveButton_pressed"]
[connection signal="file_selected" from="LoadGamePopup" to="LoadGamePopup" method="_on_LoadGamePopup_file_selected"]
